@@ -1,17 +1,17 @@
 package com.management.accommodation.service.impl;
 
-import com.management.accommodation.dto.requestDto.*;
-import com.management.accommodation.dto.responseDto.GetAllStaffsDto;
-import com.management.accommodation.dto.responseDto.GetAllStudentsDto;
-import com.management.accommodation.dto.responseDto.GetStaffDto;
-import com.management.accommodation.dto.responseDto.GetStudentDto;
-import com.management.accommodation.emailService.EmailService;
+import com.management.accommodation.dto.requestdto.*;
+import com.management.accommodation.dto.responsedto.GetAllStaffsDto;
+import com.management.accommodation.dto.responsedto.GetAllStudentsDto;
+import com.management.accommodation.dto.responsedto.GetStaffDto;
+import com.management.accommodation.dto.responsedto.GetStudentDto;
+import com.management.accommodation.emailservice.EmailService;
 import com.management.accommodation.entity.Room;
 import com.management.accommodation.entity.Staff;
+import com.management.accommodation.entity.Student;
 import com.management.accommodation.mapper.AccommodationMapper;
 import com.management.accommodation.otpService.OtpStorage;
 import com.management.accommodation.otpService.OtpUtil;
-import com.management.accommodation.entity.Student;
 import com.management.accommodation.repository.RoomRepository;
 import com.management.accommodation.repository.StaffAccommodationRepository;
 import com.management.accommodation.repository.StudentAccommodationRepository;
@@ -24,7 +24,6 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,13 +37,19 @@ public class AccommodationServiceImpl implements AccommodationService {
     private final RoomRepository roomRepository;
     private final AccommodationMapper accommodationMapper;
 
+    private static final String INVALID_ROOM_NO = "Invalid Room No";
+    private static final String MALE = "male";
+    private static final String FEMALE = "female";
+    private static final String SUBJECT_FOT_STUDENT = "Regarding Student Accommodation";
+    private static final String SUBJECT_FOT_STAFF = "Regarding Staff Accommodation";
+
     @Override
     public ResponseEntity<String> studentAccommodation(StudentDto studentDto) throws IOException {
         Student student =  accommodationMapper.studentAccommodationMapper(studentDto);
 
         Optional<Room> optionalRoom = roomRepository.findByRoom(studentDto.getRoomNo());
         if(optionalRoom.isEmpty()){
-            return new ResponseEntity<>("Invalid Room No",HttpStatus.BAD_REQUEST);
+            return new ResponseEntity<>(INVALID_ROOM_NO,HttpStatus.BAD_REQUEST);
         }
 
         Room room = optionalRoom.get();
@@ -52,10 +57,10 @@ public class AccommodationServiceImpl implements AccommodationService {
             return new ResponseEntity<>("Room is already Filled",HttpStatus.BAD_REQUEST);
         }
 
-        if(studentDto.getGender().equals("male") && !room.getBuilding().equals("B8")){
+        if(studentDto.getGender().equals(MALE) && !room.getBuilding().equals("B8")){
             return new ResponseEntity<>("Please select male student room",HttpStatus.BAD_REQUEST);
         }
-        if(studentDto.getGender().equals("female") && !room.getBuilding().equals("B9")){
+        if(studentDto.getGender().equals(FEMALE) && !room.getBuilding().equals("B9")){
             return new ResponseEntity<>("Please select female student room",HttpStatus.BAD_REQUEST);
         }
 
@@ -85,9 +90,9 @@ public class AccommodationServiceImpl implements AccommodationService {
 
                 emailService.sendEmail(
                         otpDto.getEmail(),
-                        "Regarding Student Accommodation",
+                        SUBJECT_FOT_STUDENT,
                         "Your Accommodation has been sent for the admin review. Please wait for the approval." +
-                                " You will Receive a confirmation mail with in 24 hours.");
+                                "You will Receive a confirmation mail with in 24 hours.");
                 studentStorage.removeOtp(otpDto.getEmail());
                 studentStorage.removeAccommodationDetails(otpDto.getEmail());
 
@@ -106,7 +111,7 @@ public class AccommodationServiceImpl implements AccommodationService {
 
         Optional<Room> optionalRoom = roomRepository.findByRoom(staffDto.getRoomNo());
         if(optionalRoom.isEmpty()){
-            return new ResponseEntity<>("Invalid Room No",HttpStatus.BAD_REQUEST);
+            return new ResponseEntity<>(INVALID_ROOM_NO,HttpStatus.BAD_REQUEST);
         }
 
         Room room = optionalRoom.get();
@@ -144,7 +149,7 @@ public class AccommodationServiceImpl implements AccommodationService {
 
                 emailService.sendEmail(
                         otpDto.getEmail(),
-                        "Regarding Staff Accommodation",
+                        SUBJECT_FOT_STAFF,
                         "Your Accommodation has been sent for the admin review. Please wait for the approval." +
                                 " You will Receive a confirmation mail with in 24 hours.");
                 staffStorage.removeOtp(otpDto.getEmail());
@@ -161,23 +166,23 @@ public class AccommodationServiceImpl implements AccommodationService {
 
     @Override
     public ResponseEntity<List<GetAllStudentsDto>> getAllMaleStudentAccommodations() {
-        return getStudentsByGender("male");
+        return getStudentsByGender(MALE);
     }
 
     @Override
     public ResponseEntity<List<GetAllStudentsDto>> getAllFemaleStudentAccommodations() {
-        return getStudentsByGender("female");
+        return getStudentsByGender(FEMALE);
     }
 
     private ResponseEntity<List<GetAllStudentsDto>> getStudentsByGender(String gender){
         List<Student> students = studentAccommodationRepository.findAllByGenderOrderByIdAsc(gender);
-        return new ResponseEntity<>(students.stream().map(accommodationMapper::convertToDto).collect(Collectors.toList()),HttpStatus.OK);
+        return new ResponseEntity<>(students.stream().map(accommodationMapper::convertToDto).toList(),HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<List<GetAllStudentsDto>> getAllStudentAccommodations() {
         List<Student> students = studentAccommodationRepository.findAllByOrderByIdAsc();
-        return new ResponseEntity<>(students.stream().map(accommodationMapper::convertToDto).collect(Collectors.toList()),HttpStatus.OK);
+        return new ResponseEntity<>(students.stream().map(accommodationMapper::convertToDto).toList(),HttpStatus.OK);
     }
 
     @Override
@@ -192,12 +197,12 @@ public class AccommodationServiceImpl implements AccommodationService {
 
     @Override
     public ResponseEntity<GetStudentDto> getMaleStudentAccommodation(Integer id) {
-        return getStudentByGender("male",id);
+        return getStudentByGender(MALE,id);
     }
 
     @Override
     public ResponseEntity<GetStudentDto> getFemaleStudentAccommodation(Integer id) {
-        return getStudentByGender("female",id);
+        return getStudentByGender(FEMALE,id);
     }
 
     private ResponseEntity<GetStudentDto> getStudentByGender(String gender,Integer id){
@@ -215,7 +220,7 @@ public class AccommodationServiceImpl implements AccommodationService {
     @Override
     public ResponseEntity<List<GetAllStaffsDto>> getAllStaffAccommodations() {
         List<Staff> staffs = staffAccommodationRepository.findAllByOrderByIdAsc();
-        return new ResponseEntity<>(staffs.stream().map(accommodationMapper::convertToGetAllStaffsDto).collect(Collectors.toList()), HttpStatus.OK);
+        return new ResponseEntity<>(staffs.stream().map(accommodationMapper::convertToGetAllStaffsDto).toList(), HttpStatus.OK);
     }
 
     @Override
@@ -247,18 +252,18 @@ public class AccommodationServiceImpl implements AccommodationService {
 
                     emailService.sendEmail(
                             staff.getEmail(),
-                            "Regarding Staff Accommodation",
+                            SUBJECT_FOT_STAFF,
                             "Your Accommodation has been Rejected." +
                                     " Contact Admin for more details and your accommodation fee will be refund soon");
                 }
                 else{
-                    return new ResponseEntity<>("Invalid Room No",HttpStatus.NOT_FOUND);
+                    return new ResponseEntity<>(INVALID_ROOM_NO,HttpStatus.NOT_FOUND);
                 }
             }
             else if(updateStaffStatusDto.getStatus().equals("accepted")){
                 emailService.sendEmail(
                         staff.getEmail(),
-                        "Regarding Staff Accommodation",
+                        SUBJECT_FOT_STAFF,
                         "Your Accommodation has been accepted. Your Room No: "+ staff.getRoomNo() +
                                 " Your accommodation will be from "+ staff.getStartDate() +" to "+ staff.getEndDate() +
                                 " Show this email to the receptionist to get your room keys.");
@@ -270,12 +275,12 @@ public class AccommodationServiceImpl implements AccommodationService {
 
     @Override
     public ResponseEntity<String> updateMaleStudentAccommodation(Integer id, UpdateStudentStatusDto updateStudentStatusDto) {
-        return updateStudentAccommodation(id, updateStudentStatusDto, "male");
+        return updateStudentAccommodation(id, updateStudentStatusDto, MALE);
     }
 
     @Override
     public ResponseEntity<String> updateFemaleStudentAccommodation(Integer id, UpdateStudentStatusDto updateStudentStatusDto) {
-        return updateStudentAccommodation(id, updateStudentStatusDto, "female");
+        return updateStudentAccommodation(id, updateStudentStatusDto, FEMALE);
     }
 
     private ResponseEntity<String> updateStudentAccommodation(Integer id, UpdateStudentStatusDto updateStudentStatusDto, String gender) {
@@ -296,18 +301,18 @@ public class AccommodationServiceImpl implements AccommodationService {
 
                     emailService.sendEmail(
                             student.getEmail(),
-                            "Regarding Student Accommodation",
+                            SUBJECT_FOT_STUDENT,
                             "Your Accommodation has been Rejected." +
                                     " Contact Admin for more details and your accommodation fee will be refund soon");
                 }
                 else{
-                    return new ResponseEntity<>("Invalid Room No",HttpStatus.NOT_FOUND);
+                    return new ResponseEntity<>(INVALID_ROOM_NO,HttpStatus.NOT_FOUND);
                 }
             }
             else if(updateStudentStatusDto.getStatus().equals("accepted")){
                 emailService.sendEmail(
                         student.getEmail(),
-                        "Regarding Student Accommodation",
+                        SUBJECT_FOT_STUDENT,
                         "Your Accommodation has been accepted. Your Room No: "+ student.getRoomNo() +
                                 " Your accommodation will be from "+ student.getStartDate() +" to "+ student.getEndDate() +
                                 " Show this email to the receptionist to get your room keys.");
